--- a/layouts/partials/tags-list.html
+++ b/layouts/partials/tags-list.html
@@ -12,16 +12,7 @@
 		</header>
 
 		<div class="excerpt">
-			{{ if isset .Params "description" | and (ne .Params.description "") -}}
-				{{ .Description | markdownify }}
-			{{- else -}}
-				{{ .Summary }}
-			{{- end }}
-
-			<br>
-			<a class="button" href="{{ .Permalink }}">
-				{{ .Site.Data.l10n.continueReading }}
-			</a>
+			{{ .Content }}
 		</div>
 	</div>
 	{{- end }}
