--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,5 +1,8 @@
 <p class="meta">
+	{{ if isset .Params "date" -}}
 	{{ .Date.Format "January 2, 2006" }} &middot; {{ .Params.author }}
+	{{- end }}
+	
 
 	{{ if isset .Params "tags" -}}
 		{{ $tagsLen := len .Params.tags }}
